@@ -42,61 +42,30 @@ function ErrorHandler404($errno, $errmsg, $filename, $linenum, $vars)
 	}
 }
 
-if (!file_exists("config.php") || filesize("config.php") == 0) {
-    require_once("lib/misc.functions.php");
-    redirect("install.php");
-    exit;
-} ## if
-if ($_GET["deleteinstall"] == "true") {
-    @unlink("install.php");
-} ## if
-
-if (file_exists("config.php") && file_exists("install.php")) {
-    echo "You cannot start CMS until you remove the install.php<br>\n";
-    if ($_GET["deleteinstall"] == "true") {
-        echo "Looks like you tried to have CMS delete the install file but that was not sucessful.  You will have to remove it manually before you can continue<br>\n";
-        exit;
-    } ## if
-    echo "Click <a href=\"index.php?deleteinstall=true\">here</a> to have CMS try to delete it for you.  If successful you will see the CMS main page<br>\n";
-    exit;
-} ## if
-
 require_once("include.php");
 
-$smarty = new Smarty_CMS($config);
+$smarty = new Smarty_ModuleInterface($config);
 
-$page = "";
+$modulecmsobj->page = $_GET["return_id"].$_POST["return_id"];
+$smarty->page = $_GET["return_id"].$_POST["return_id"];
+$smarty->module = $_GET["module"].$_POST["module"];
+$smarty->id = $_GET["id"].$_POST["id"];
 
-if (isset($config->query_var) && $config->query_var != "") {
-	if (isset($_GET[$config->query_var])) {
-		$page = $_GET[$config->query_var];
-	}
-}
-else {
-	if (isset($_SERVER["PATH_INFO"])) {
-		$page = $_SERVER["PATH_INFO"];
-	}
-}
-
-if ($page == "") {
-	$page = db_get_default_page($config);
-}
-
-$modulecmsobj->page = $page;
-
-($smarty->is_cached('db:'.$page)?$cached="":$cached="not ");
+$params = array_merge($_GET, $_POST);
+$smarty->params = $params;
 
 $old_error_handler = set_error_handler("ErrorHandler404");
-$html = $smarty->fetch('db:'.$page) . "\n";
+$html = $smarty->fetch('module:'.$modulecmsobj->page) . "\n";
 set_error_handler($old_error_handler);
 
 echo $html;
-@ob_flush();
 
 $endtime = microtime();
 
-echo "<!-- Generated in ".microtime_diff($starttime,$endtime)." seconds by CMS Made Simple (".$cached."cached)-->\n";
+echo "<!-- Generated in ".microtime_diff($starttime,$endtime)." seconds by CMS Made Simple (not cached)-->\n";
 echo "<!-- Generated by CMS Made Simple -- Released under the GPL -- http://cmsmadesimple.org -->\n";
+
+@ob_flush();
 
 # vim:ts=4 sw=4 noet
 ?>
